# node-agnostic-spark

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  duckspark.py  pyproject.toml  setup.cfg  setup.py
spark/: __init__.py  alt_assets.py  assets.py  io.py
